upgrade client